<resources>
    <string name="empty"></string>
    <string name="app_name">Graduation_Project</string>
    <string name="action_back">返回</string>
    <string name="action_clear">清空</string>
    <string name="action_search">搜索</string>
    <string name="action_share">分享</string>
    <string name="action_copy_website">复制链接</string>
    <string name="action_open_in_browser">在浏览器打开</string>
    <string name="action_refresh">刷新</string>
    <string name="action_reorder">排序</string>
    <string name="action_more_menus">更多菜单</string>
    <string name="action_settings">设置</string>
    <string name="action_message">信息</string>
    <string name="action_push">推送</string>
    <string name="action_add">添加</string>
    <string name="action_add_person">加群/加好友</string>
    <string name="action_create_group">创建群</string>
    <string name="action_address_book">通讯录</string>
    <string name="label_favorites">自选</string>
    <string name="label_market">市场</string>
    <string name="action_confirm">确认</string>
    <string name="action_cancel">取消</string>
    <string name="action_edit">编辑</string>
    <string name="action_delete">删除</string>
    <string name="error_interrupted_exception">InterruptedException</string>
    <string name="error_execution_exception">ExecutionException</string>
    <string name="msg_succeed_in_deleting">删除成功</string>
    <string name="error_failed_to_delete">删除失败</string>
    <string name="error_failed_to_refresh">更新失败</string>
    <string name="prompt_full_screen_image">全屏图</string>
    <string name="msg_under_developing">功能开发中</string>
    <string name="action_save">保存</string>
    <string name="error_sdcard_not_exist">SD卡未插入</string>
    <string name="format_double_with_two_decimals">%.2f</string>
    <string name="format_double_with_two_decimals_positive">+%.2f</string>
    <string name="format_double_with_three_decimals">%.3f</string>
    <string name="format_double_with_three_decimals_positive">+%.3f</string>
    <string name="format_percentage_with_two_decimals">%.2f%%</string>
    <string name="format_percentage_with_two_decimals_negative">-%.2f%%</string>
    <string name="format_percentage_with_two_decimals_positive">+%.2f%%</string>
    <string name="msg_succeeded_in_downloading">下载成功，开始安装......</string>
    <string name="error_failed_to_download">下载失败 </string>
    <string name="msg_under_downloading">正在更新......</string>
    <string name="msg_start_downloading">开始下载</string>
    <string name="format_current_downloading_progress">当前进度：%.2f%%</string>
    <string name="msg_finish_downloading">下载完成</string>
    <string name="prompt_user_name_phone_and_email">手机号/用户ID</string>
    <string name="prompt_password">密码</string>
    <string name="action_login">登录</string>
    <string name="action_visitor_login">游客登录</string>
    <string name="action_forget_password">忘记密码</string>
    <string name="action_register">注册</string>
    <string name="action_goto_test_activity">goto TestActivity</string>
    <string name="error_empty_account_forbidden">请输入账号</string>
    <string name="error_empty_password_forbidden">请输入密码</string>
    <string name="error_too_short_password">密码长度不能少于6位</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="msg_login_successful">登录成功</string>
    <string name="error_login_failed">登录失败</string>
    <string name="error_has_not_registered">该用户尚未注册</string>
    <string name="error_invalid_username">用户名不正确</string>
    <string name="error_invalid_phone">手机号不正确</string>
    <string name="error_invalid_email">邮箱不正确</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="warn_different_mac_address">您上次登录的设备不同</string>
    <string name="error_has_logged_in_on_another_phone">您的账号已经在另一台设备登录</string>
    <string name="error_has_logged_in_on_the_phone">已在本设备登录过</string>
    <string name="error_account_frozen">您的账号已被冻结</string>
    <string name="error_internet_not_connected">网络异常</string>
    <string name="error_server_disconnected">服务器异常</string>
    <string name="cancel_login">取消登录</string>
    <string name="label_phone_register">手机号注册</string>
    <string name="label_countries_and_regions">国家/地区</string>
    <string name="prompt_register_phone">您注册的手机号码</string>
    <string name="prompt_register_vericode">验证码</string>
    <string name="prompt_register_password">您设置的密码</string>
    <string name="action_get_vericode">获取验证码</string>
    <string name="format_get_vericode_again">%d秒后可重新获取</string>
    <string name="msg_under_submitting_vericode">正在提交验证码……</string>
    <string name="error_phone_been_registered">该手机号已被注册</string>
    <string name="msg_get_vericode_successfully">验证码已发送到您的手机上</string>
    <string name="msg_verify_successfully">验证成功</string>
    <string name="error_vericode_mismatched">验证码错误</string>
    <string name="msg_register_succeeded">注册成功</string>
    <string name="error_register_failed">注册失败</string>
    <string name="label_recommendations">推荐</string>
    <string name="label_assets">资产</string>
    <string name="label_quotations">行情</string>
    <string name="label_information">资讯</string>
    <string name="label_mine">我的</string>
    <string name="title_activity_settings">Settings</string>
    <string name="msg_one_more_time_click_to_exit">再次点击退出APP</string>
    <string name="msg_under_connecting_to_server">正在连接服务器……</string>
    <string name="msg_under_data_loading">正在加载数据……</string>
    <string name="msg_under_data_loading_sz">正在加载深证成指……</string>
    <string name="msg_under_data_loading_sh">正在加载上证指数……</string>
    <string name="msg_under_data_loading_chuang_ye_ban">正在加载创业板指……</string>
    <string name="error_failed_to_load_data">加载失败</string>
    <string name="msg_succeed_in_loading_data">加载成功</string>
    <string name="msg_under_saving_in_database">正在保存数据……</string>
    <string name="error_failed_to_save_in_database">无法保存数据</string>
    <string name="label_hot_stock_title">热搜榜</string>
    <string name="msg_under_loading_transactions">正在加载交易列表……</string>
    <string name="msg_succeeded_in_loading_transactions">交易列表加载成功</string>
    <string name="label_shanghai_shenzhen_simulate_market">沪深模拟盘</string>
    <string name="label_profit_and_loss">盈亏：</string>
    <string name="format_profit_and_loss">@string/format_double_with_three_decimals</string>
    <string name="label_buy">买入：</string>
    <string name="label_sell">卖出：</string>
    <string name="format_stock_name_id_and_type">%1$s(%2$s.%3$s)</string>
    <string name="label_transaction_price">价格：</string>
    <string name="format_transaction_price">@string/format_double_with_three_decimals</string>
    <string name="label_total_revenue_of_buying">买入时总收入：</string>
    <string name="label_total_revenue_of_selling">卖出时总收入：</string>
    <string name="format_total_revenue">%d%%</string>
    <string name="action_follow_to_buy">跟买</string>
    <string name="action_follow_to_sell">跟卖</string>
    <string name="action_open_k_line_chart">分时图</string>
    <string name="label_unit_price_of_buying">买1价</string>
    <string name="label_unit_price_of_selling">卖1价</string>
    <string name="label_stock">股票</string>
    <string name="format_stock_id_and_china">%s.CN</string>
    <string name="label_price">价格</string>
    <string name="label_count">数量</string>
    <string name="label_order_of_magnitude">订单金额：</string>
    <string name="label_purchasing_power">购买力：</string>
    <string name="label_max_available_buying_count">最大可买：</string>
    <string name="label_max_available_selling_count">最大可卖：</string>
    <string name="action_subtract_point_nought_one">-0.01</string>
    <string name="action_add_point_nought_one">+0.01</string>
    <string name="action_subtract_hundred">-100</string>
    <string name="action_add_hundred">+100</string>
    <string name="action_buy">买入</string>
    <string name="action_sell">卖出</string>
    <string name="default_trade_count_hundred">100</string>
    <string name="msg_succeed_in_buying">买入成功</string>
    <string name="msg_succeed_in_selling">卖出成功</string>
    <string name="error_failed_to_buy">买入失败</string>
    <string name="error_failed_to_sell">卖出失败</string>
    <string name="label_group_manager">管理分组</string>
    <string name="action_group_manager">管理分组</string>
    <string name="format_group_name">%1$s (%2$d)</string>
    <string name="action_add_new_group"> + 新建分组</string>
    <string name="label_input_group_name">请输入分组名称</string>
    <string name="hint_add_new_group">最多5个中文</string>
    <string name="error_failed_to_add_new_group">添加失败</string>
    <string name="error_the_group_has_existed">该分组已存在</string>
    <string name="error_group_name_too_long">分组名称太长</string>
    <string name="error_group_name_empty">请输入分组名称</string>
    <string name="msg_succeed_in_adding_new_group">添加成功</string>
    <string name="action_group_editor">编辑分组</string>
    <string name="action_click_to_rename_group"> 点击分组名称可重命名</string>
    <string name="msg_succeed_in_renaming_group">重命名成功</string>
    <string name="error_failed_to_rename_group">重命名失败</string>
    <string name="prompt_stock_name_id_or_full_spelling">股票名称/代码/全拼</string>
    <string name="label_stock_search_history">以下为历史查询记录</string>
    <string name="action_clear_stock_search_history">清除记录</string>
    <string name="msg_succeed_in_clearing_stock_search_history">已清除</string>
    <string name="error_failed_to_clear_stock_search_history">清除失败</string>
    <string name="msg_succeed_in_adding_favorite_stock">关注成功</string>
    <string name="error_failed_to_add_favorite_stock">关注失败</string>
    <string name="msg_succeed_in_cancelling_favorite_stock">取消关注</string>
    <string name="error_failed_to_cancel_favorite_stock">取消关注失败</string>
    <string name="label_message">消息</string>
    <string name="action_full_screen">全屏</string>
    <string name="label_quotation_title_name_and_id">名称代码</string>
    <string name="label_quotation_title_current_price">最新价</string>
    <string name="label_quotation_title_fluctuation_rate">涨跌幅</string>
    <string name="default_stock_name">股票名称</string>
    <string name="default_stock_id">股票代码</string>
    <string name="default_stock_name_id_and_type">股票名称 (股票代码.股票类型)</string>
    <string name="default_current_price">当前价格</string>
    <string name="default_current_point">当前点数</string>
    <string name="default_fluctuation_rate">涨跌率</string>
    <string name="label_sz">SZ</string>
    <string name="label_sh">SH</string>
    <string name="format_stock_price">%.2f</string>
    <string name="format_stock_point">@string/format_double_with_three_decimals</string>
    <string name="format_stock_point_positive">+%.3f</string>
    <string name="format_stock_point_negative">-%.3f</string>
    <string name="format_stock_price_positive">+%.2f</string>
    <string name="action_set_special_attention">特别关注</string>
    <string name="action_set_top">置顶</string>
    <string name="action_bulk_edition">批量编辑</string>
    <string name="label_latest_information">最新资讯</string>
    <string name="label_default_latest_information_title">最新资讯标题</string>
    <string name="label_default_latest_information_clock_time">最新资讯时间</string>
    <string name="label_multi_account_management">多账号管理</string>
    <string name="label_account_and_safety">账号与安全</string>
    <string name="label_logout">退出登录</string>
    <string name="label_about_us">关于我们</string>
    <string name="action_photograph">拍照</string>
    <string name="action_select_from_album">从相册选择</string>
    <string name="action_check_portrait">查看头像</string>
    <string name="prompt_new_nickname">新昵称</string>
    <string name="tip_good_nickname_to_be_remembered">一个好的昵称可以让别人记住你</string>
    <string name="txt_test_title_send">发送内容</string>
    <string name="txt_test_title_reception">接收内容</string>
    <string name="action_test_client_send">发送</string>
    <string name="action_test_get_sz">getSzIdAndName</string>
    <string name="action_test_connect_to_server">连接到服务器</string>
</resources>