<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@mipmap/ic_search_white"
        android:orderInCategory="1"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_browser_more_menus"
        android:icon="@mipmap/ic_more_horizontal_white"
        android:orderInCategory="2"
        android:title="@string/action_more_menus"
        app:showAsAction="ifRoom">
        <menu>
            <group>
                <item
                    android:id="@+id/menu_message"
                    android:icon="@mipmap/ic_message"
                    android:orderInCategory="3"
                    android:title="@string/action_message"
                    app:showAsAction="ifRoom"/>
                <item
                    android:id="@+id/menu_share"
                    android:icon="@mipmap/ic_share_white"
                    android:orderInCategory="4"
                    android:title="@string/action_share"
                    app:showAsAction="ifRoom"/>
                <item
                    android:id="@+id/menu_copy_website"
                    android:icon="@mipmap/ic_copy_website_white"
                    android:orderInCategory="5"
                    android:title="@string/action_copy_website"
                    app:showAsAction="ifRoom"/>
                <item
                    android:id="@+id/menu_open_in_browser"
                    android:icon="@mipmap/ic_open_in_browser_white"
                    android:orderInCategory="6"
                    android:title="@string/action_open_in_browser"
                    app:showAsAction="ifRoom"/>
                <item
                    android:id="@+id/menu_refresh"
                    android:icon="@mipmap/ic_refresh_white"
                    android:orderInCategory="6"
                    android:title="@string/action_refresh"
                    app:showAsAction="ifRoom"/>
            </group>
        </menu>
    </item>
</menu>