<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/action_address_book"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:icon="@mipmap/ic_contacts_white"
        android:id="@+id/menu_address_book"/>
    <item
        android:title="@string/action_add"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        android:icon="@mipmap/ic_add_white"
        android:id="@+id/menu_add">
        <menu>
            <group>
                <item
                    android:title="@string/action_create_group"
                    app:showAsAction="ifRoom"
                    android:orderInCategory="4"
                    android:icon="@mipmap/ic_group_add_white"
                    android:id="@+id/menu_create_group"/>
            <item
                android:title="@string/action_add_person"
                app:showAsAction="ifRoom"
                android:orderInCategory="3"
                android:icon="@mipmap/ic_person_add_white"
                android:id="@+id/menu_add_person"/>
            </group>
        </menu>
        </item>
</menu>