<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:visible="false"
        android:id="@+id/menu_push"
        android:orderInCategory="1"
        android:title="@string/action_push"
        app:showAsAction="always"/>
    <item
        android:visible="false"
        android:id="@+id/menu_message"
        android:icon="@mipmap/ic_message"
        android:orderInCategory="3"
        android:title="@string/action_message"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@mipmap/ic_refresh_white"
        android:orderInCategory="4"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom"/>
</menu>