<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/h_layout_trade_stock_info"
    android:paddingBottom="@dimen/p_t_b_layout_trade_stock_info"
    android:paddingLeft="@dimen/p_l_r_layout_trade_stock_info"
    android:paddingRight="@dimen/p_l_r_layout_trade_stock_info"
    android:paddingTop="@dimen/p_t_b_layout_trade_stock_info">

    <TextView
        android:id="@+id/tv_stock_name_id_and_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_stock_name_id_and_type"
        android:textSize="@dimen/ts_trade_stock_info"
        android:textColor="@color/tc_trade_stock_name_id_and_type"/>

    <TextView
        android:id="@+id/tv_stock_current_price"
        android:textSize="@dimen/ts_trade_stock_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tv_stock_name_id_and_type"
        android:layout_below="@id/tv_stock_name_id_and_type"
        android:layout_marginTop="@dimen/m_t_trade_stock_current_price"
        android:text="@string/default_current_price"
        android:textColor="@color/tc_trade_stock_current_price"/>

    <TextView
        android:id="@+id/tv_stock_current_point"
        android:textSize="@dimen/ts_trade_stock_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tv_stock_current_price"
        android:layout_centerVertical="true"
        android:layout_marginStart="18dp"
        android:layout_toEndOf="@+id/tv_stock_current_price"
        android:text="@string/default_current_point"
        android:textColor="@color/tc_trade_stock_current_point"/>

    <TextView
        android:id="@+id/tv_fluctuation_rate"
        android:textSize="@dimen/ts_trade_stock_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tv_stock_current_price"
        android:layout_marginLeft="@dimen/m_l_trade_stock_fluctuation_rate"
        android:layout_toRightOf="@id/tv_stock_current_point"
        android:text="@string/default_fluctuation_rate"
        android:textColor="@color/tc_trade_stock_fluctuation_rate"/>

    <ImageView
        android:id="@+id/img_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/action_refresh"
        android:src="@mipmap/ic_refresh_grey"/>
</RelativeLayout>
