<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:paddingLeft="@dimen/p_l_r_layout_latest_information_rv_list_item"
                android:paddingRight="@dimen/p_l_r_layout_latest_information_rv_list_item"
                android:paddingTop="@dimen/p_t_b_layout_latest_information_rv_list_item"
                android:paddingBottom="@dimen/p_t_b_layout_latest_information_rv_list_item"
                android:layout_marginBottom="@dimen/m_b_layout_latest_information_rv_list_item"
                android:id="@+id/layout_list_item_rv_latest_information"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <ImageView
        android:contentDescription="@string/label_latest_information"
        android:id="@+id/img_rv_latest_information"
        android:src="@mipmap/ic_information"
        android:layout_width="@dimen/w_img_rv_latest_information"
        android:layout_height="@dimen/h_img_rv_latest_information"/>

    <TextView
        android:id="@+id/tv_rv_latest_information_title"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@id/img_rv_latest_information"
        android:layout_alignTop="@id/img_rv_latest_information"
        android:text="@string/label_default_latest_information_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_rv_latest_information_clock_time"
        android:text="@string/label_default_latest_information_clock_time"
        android:layout_alignBottom="@+id/img_rv_latest_information"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>
